osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_binary_comparison_must_contain_identifier[True and False and True].txt
error: one value must be a literal
--> main.sml:1:8
     |
   1 | Query = True and False and True
     |         ^ one side of the `and` must be a non-literal (non-constant) value
--> (1) main.sml:1:8
     |
   1 | Query = True and False and True
     |         ^ this is a literal value
--> (2) main.sml:1:17
     |
   1 | Query = True and False and True
     |                  ^ this is a literal value
--> (3) main.sml:1:27
     |
   1 | Query = True and False and True
     |                            ^ this is a literal value